# deepin-mcp

./: .env  README.md  build.sh  compile_server.sh  deepin-mcp.spec  main.py  planning.py  pyproject.toml  server_config.json
client/: client.py  planning.py  task.py
servers/: baidu_search.py  bash_server.py  file_server.py  weather_server.py
